src/objects/ShippingRequistion__c.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>上传装箱单/收货单附件</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BrandType__c</fullName>
        <label>品牌类型</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <inlineHelpText>发货条件：1.货款 2.环评结果,两项满足为常规发货,两项其一不符合即为特殊发货,特殊发货需写明因。</inlineHelpText>
        <label>特殊发货申请原因</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChineseName__c</fullName>
        <label>中文名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientType__c</fullName>
        <label>客户类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>常规客户</fullName>
                </value>
                <value>
                    <fullName>大型集团客户</fullName>
                </value>
                <value>
                    <fullName>大型融资客户</fullName>
                </value>
                <value>
                    <fullName>大型非集团非融资</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConditionDelivery__c</fullName>
        <label>符合发货条件</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consignee__c</fullName>
        <label>收货人</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <label>联系人</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>收货单位/客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>发货申请单</relationshipLabel>
        <relationshipName>CustomerName2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateSign__c</fullName>
        <label>工程师签字日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>物流部签字日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryBatch__c</fullName>
        <label>发货批次</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <label>期望到货日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisplayArea__c</fullName>
        <label>设备摆放面积（2m*2m）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EiaBy__c</fullName>
        <label>环评通过</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <label>设备安装工程师</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnquiryHotline__c</fullName>
        <label>查询电话</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnvironmentRequirements__c</fullName>
        <label>欧堡设备装机环境及要求</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedDate__c</fullName>
        <label>预计到货日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinishTime__c</fullName>
        <label>验收完成时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FreightCorporation__c</fullName>
        <label>货运公司</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InmarsatSerial__c</fullName>
        <label>设备序列号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <label>无需联网</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LANSegment__c</fullName>
        <label>共用同一个局域网段</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LadingNo__c</fullName>
        <label>货运单号</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationEquipment__c</fullName>
        <label>确定设备摆放位置</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MicroQuery__c</fullName>
        <label>微信查询</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkLocation__c</fullName>
        <label>联网位置</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify__c</fullName>
        <label>区域技术经理知会</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numbers__c</fullName>
        <label>联网台数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>发货申请单</relationshipLabel>
        <relationshipName>OrderForm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>发货设备</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>发货申请单</relationshipLabel>
        <relationshipName>OrderProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginalNumber__c</fullName>
        <label>原件数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PASC__c</fullName>
        <label>院方PASC系统联网</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageNumber__c</fullName>
        <label>打包后件数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>付款方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>预付款到账</fullName>
                </value>
                <value>
                    <fullName>全款到账</fullName>
                </value>
                <value>
                    <fullName>验收后回款</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>电话</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>备注</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceEnvironment__c</fullName>
        <label>设备使用环境（半暗室、灰尘、噪音）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentDate__c</fullName>
        <label>发货日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <label>收货地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature2__c</fullName>
        <label>物流部签字</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>工程师签字</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalManager__c</fullName>
        <label>区域技术经理</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>设备使用温度（18°C-26°C）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>安装完成时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TypeSubclass__c</fullName>
        <label>型号子类</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>发货申请单</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>FHSQ-{00000000}</displayFormat>
        <label>发货申请单编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>发货申请单</pluralLabel>
    <recordTypes>
        <fullName>ShippingRequistion</fullName>
        <active>true</active>
        <label>发货申请单(不含欧堡设备）</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShippingRequistion2</fullName>
        <active>true</active>
        <label>发货申请单（含欧堡设备）</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>